WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308927
border-spacing should not include collapsed columns in auto table layout
https://bugs.webkit.org/show_bug.cgi?id=308927
Summary
border-spacing should not include collapsed columns in auto table layout
Ahmad Saleem
Reported
2026-03-01 05:18:10 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-01 05:18:17 PST
<
rdar://problem/171468102
>
Ahmad Saleem
Comment 2
2026-03-01 05:20:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59673
EWS
Comment 3
2026-03-03 08:01:10 PST
Committed
308549@main
(8538f6ca6c3e): <
https://commits.webkit.org/308549@main
> Reviewed commits have been landed. Closing PR #59673 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug